# ontrack-4k

./: .gitignore  .gitmodules  Arp.yml  CMakeLists.txt  FirstSointu.flp  README.md  bass.yml  kick.yml  nr4.nfo  pyproject.toml  snare.yml  song.asm  song.h  song.yml
code/: CMakeLists.txt  intro.asm  wav.asm
graphics/: gfx.frag
music/: FirstSointu.flp  ambient_pad.yml  song.yml
toolchain/: common.cmake  crinkler.cmake  lld.cmake
video/: __main__.py  preview.py  preview.ui  renderer.py
